1.3
* Load in flag file

1.2
* Fixed array indexing issue

1.1
* Improved auto*, changed library name a little

1.0 
* Initial version