@@ -1,5 +1,6 @@
 1.3
 * Load in flag file
+* use calloc where appropriate
 
 1.2
 * Fixed array indexing issue
